--- a/src/components/product/ProductSection/styles.module.scss
+++ b/src/components/product/ProductSection/styles.module.scss
@@ -23,3 +23,12 @@
   gap: 16px;
 }
 
+.see-all {
+  display: block;
+  text-align: center;
+  margin-bottom: 16px;
+  font-weight: bold;
+  color: #333;
+  text-decoration: none;
+}
+
